# btcdeb

./: .cirrus.yml  .gitignore  .travis.yml  Dockerfile  GNUmakefile  LICENSE  Makefile  Makefile.am  README.md  alpine.dockerfile  ansi-colors.h  approach.cpp  approach.functions.cpp  approach.functions.h  arith_uint256.h  base58.cpp  base58.h  bech32.cpp  bech32.h  btcc.cpp  btcdeb.cpp  cliargs.h  configure.ac  configure.lineno  datasets.h  docker-compose.yml  ecide.cpp  functions.cpp  functions.h  hash.cpp  hash.h  instance.cpp  instance.h  interpreter.cpp  interpreter.h  mastify.cpp  merkle.cpp  merkle.h  merklebranch.cpp  msenv.cpp  (+20 more)
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codeql.yml
algo/: gausselim.h
ci/test/: 00_setup_env.sh  00_setup_env_mac_host.sh  00_setup_env_native_asan.sh  00_setup_env_native_valgrind.sh  04_install.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh  wrap-qemu.sh  wrap-wine.sh
compat/: byteswap.h  endian.h
compiler/: env.cpp  env.h  secp256k1-bridge.cpp  secp256k1-bridge.h  tinyast.h  tinyparser.cpp  tinyparser.h  tinytokenizer.cpp  tinytokenizer.h  var.h
consensus/: merkle.cpp  merkle.h
crypto/: common.h  sha256.cpp  sha256.h
debugger/: hash.cpp  interpreter.cpp  interpreter.h  script.cpp  script.h  see.h  version.h
doc/: 0001-btcdeb-on-Bitcoin-Core-0.20.99-current-master.patch  README.md  btcdeb.md  example-multisig-invalid-order.txt  mock-values.md  opcodes.md  patch-bitcoin-core-0.19.diff  tapscript-example-with-tap.md  tapscript-example.md
doc/txs/: USAGE.md  p2pkh-in  p2pkh-tx  p2sh-multisig-2-of-2-in  p2sh-multisig-2-of-2-tx  p2sh-multisig-invalid-order-in  p2sh-multisig-invalid-order-tx  p2sh-p2wpkh-in  p2sh-p2wpkh-tx  p2tr-in  p2tr-tx  p2ts-in  p2ts-tx
extras/: reset-to-core.sh
kerl/: kerl.c  kerl.h
miniscript/: compiler.cpp  compiler.h
policy/: policy.h
primitives/: transaction.cpp  transaction.h
script/: interpreter.cpp  interpreter.h  miniscript.cpp  miniscript.h  script.cpp  script.h  script_error.cpp
secp256k1/: .travis.yml  configure.ac
secp256k1/include/: secp256k1.h  secp256k1_extrakeys.h  secp256k1_schnorrsig.h
secp256k1/src/: bench_ecmult.c  bench_schnorrsig.c  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult_impl.h  group.h  group_impl.h  hash_impl.h  num.h  num_gmp_impl.h  scalar.h  scalar_impl.h  scalar_low_impl.h  secp256k1.c  tests.c
secp256k1/src/modules/schnorrsig/: main_impl.h  tests_impl.h
support/: lockedpool.cpp
test/: catch.cpp  catch.hpp  s256bdg.cpp  signing.cpp  test-ecide.cpp  tokenizer.cpp  treeifier.cpp  utils.cpp  value.cpp
util/: strencodings.cpp  strencodings.h
